# chrome-scraper

./: .env.tmpl  .pre-commit-config.yaml  Dockerfile  README.md  compose.yml  docker-compose.yml  makefile  pyproject.toml  requirements.txt  startup.sh
.github/workflows/: deploy.yml
scraping_service/: app.py
scraping_service/helpers/: driver.py  lifespan.py  schemas.py
src/scraping_service/: __init__.py  app.py  test.py
src/scraping_service/helpers/: driver.py  error_handling.py  lifespan.py  schemas.py
src/tests/: test_driver.py
src/tests/test_data/: test.html
